# libtxl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/txl/: action.h  app.h  array_view.h  atomic.h  backoff.h  binary_log_file.h  bitwise.h  box.h  btree.h  buffer_ref.h  chunked_vector.h  convert.h  copy.h  csv.h  delta_vector.h  error.h  event_loop.h  event_poller.h  event_timer.h  exception.h  exit_guard.h  expect.h  feature_flag.h  file.h  file_base.h  find.h  fixed_string.h  fixed_vector.h  flat_map.h  foreach_result.h  free_guard.h  handle_error.h  http.h  injector.h  io.h  io_buffer.h  io_reactor.h  is_one_of.h  iterator_view.h  iterators.h  (+54 more)
include/txl/experimental/: area.h  getter.h  union.h
src/: CMakeLists.txt
src/txl/: CMakeLists.txt  expect.cpp
tests/: CMakeLists.txt  test_action.cpp  test_array_view.cpp  test_atomic.cpp  test_backoff.cpp  test_bitwise.cpp  test_box.cpp  test_btree.cpp  test_buffer_ref.cpp  test_copy.cpp  test_coroutine.cpp  test_csv.cpp  test_delta_vector.cpp  test_event_poller.cpp  test_event_timer.cpp  test_exit_guard.cpp  test_expect.cpp  test_feature_flag.cpp  test_file.cpp  test_find.cpp  test_fixed_string.cpp  test_fixed_vector.cpp  test_http.cpp  test_http_parser.cpp  test_injector.cpp  test_io_reactor.cpp  test_is_one_of.cpp  test_iterator_view.cpp  test_iterators.cpp  test_lexer.cpp  test_linked_list.cpp  test_memory_map.cpp  test_memory_pool.cpp  test_mempool.cpp  test_object.cpp  test_observer.cpp  test_on_exit.cpp  test_one_of.cpp  test_opaque_ptr.cpp  test_option_parser.cpp  (+28 more)
tests/tar_data/: test1.tar
tools/: CMakeLists.txt
tools/mc_echo/: CMakeLists.txt  mc_echo.cpp
tools/tcp_proxy/: CMakeLists.txt  tcp_proxy.cpp
