add_executable(test_iterator_view test_iterator_view.cpp)
add_test(NAME test_iterator_view COMMAND test_iterator_view)
add_executable(test_memory_pool test_memory_pool.cpp)
add_test(NAME test_memory_pool COMMAND test_memory_pool)
add_executable(test_is_one_of test_is_one_of.cpp)
add_test(NAME test_is_one_of COMMAND test_is_one_of)
add_executable(test_opaque_ptr test_opaque_ptr.cpp)
add_test(NAME test_opaque_ptr COMMAND test_opaque_ptr)
add_executable(test_patterns test_patterns.cpp)
add_test(NAME test_patterns COMMAND test_patterns)
add_executable(test_ref test_ref.cpp)
add_test(NAME test_ref COMMAND test_ref)
add_executable(test_resource_pool test_resource_pool.cpp)
add_test(NAME test_resource_pool COMMAND test_resource_pool)
add_executable(test_ring_buffer test_ring_buffer.cpp)
add_test(NAME test_ring_buffer COMMAND test_ring_buffer)
add_executable(test_type_info test_type_info.cpp)
add_test(NAME test_type_info COMMAND test_type_info)
include_directories(../include/)
